<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="Back"
                android:padding="10dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/tv_appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/iv_back"
                android:text="@string/peripheral"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <!-- Content area -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Scanner block -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:padding="10dp">

            <!-- QR + label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/qr_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/scanner" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/scanner_text"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="22sp" />
            </LinearLayout>

            <!-- Start/Stop buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_btn_purple"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="40dp"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stop"
                    android:background="@drawable/rounded_btn_purple_stop"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <!-- Scanned data block -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/box_background"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scanned_data"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="22sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/scanner_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Scanner block -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="100dp"
            android:padding="10dp">

            <!-- QR + label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/printer_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/printer" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/printer"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="22sp" />
            </LinearLayout>

            <!-- Start/Stop buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_print"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_btn_purple"
                    android:text="@string/print"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


            </LinearLayout>
        </LinearLayout>

        <!-- Scanned data block -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/box_background"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printed_status"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/printer_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp">

        <!-- Scanner block -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="65dp"
            android:padding="10dp">

            <!-- QR + label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/swipe_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/card_swipe" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/swipe_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:text="@string/swipe_test"
                    android:textColor="?attr/colorPrimary"
                    android:textStyle="bold"
                    android:textSize="22sp" />
            </LinearLayout>

            <!-- Start/Stop buttons -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_swipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read"
                    android:textColor="@color/white"
                    android:background="@drawable/rounded_btn_purple"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginEnd="8dp" />

            </LinearLayout>
        </LinearLayout>

        <!-- Scanned data block -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/box_background"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/swiped_data"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/swipe_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#000000"
                android:textStyle="bold"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DDDDDD" />
</LinearLayout>
